pysimple files edit

--- a/Include/jupyter_files/PysimpleGUI_file.ipynb
+++ b/Include/jupyter_files/PysimpleGUI_file.ipynb
@@ -9,20 +9,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None []\n"
+      "ok\n",
+      "ok\n"
      ]
     }
    ],
    "source": [
     "import PySimpleGUI as sg\n",
     "\n",
-    "layout=[[sg.Text(text=\"Hello world\",justification='center')],]\n",
+    "layout=[[sg.Text(text=\"Hello world\",justification='center')],\n",
+    "        [sg.Button('click')]]\n",
     "window=sg.Window(\"Trial\",layout,size=(200,100))\n",
     "while True:\n",
     "    event,value=window.read()\n",
-    "    print(event,value)\n",
+    "    # print(event,value)\n",
     "    if event in (None,'Exit'):\n",
     "        break\n",
+    "    if event=='click':\n",
+    "        sg.popup('ok')\n",
+    "        sg.popup_get_file('Select a file',  title=\"File selector\")\n",
+    "        print(\"ok\")\n",
     "window.close()"
    ]
   }
