--- a/Include/jupyter_files/PysimpleGUI_file.ipynb
+++ b/Include/jupyter_files/PysimpleGUI_file.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import PySimpleGUI as sg\n",
     "\n",
@@ -29,6 +20,36 @@
     "        sg.popup('ok')\n",
     "        sg.popup_get_file('Select a file',  title=\"File selector\")\n",
     "        print(\"ok\")\n",
+    "window.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PySimpleGUI as sg\n",
+    "import pymongo as mg\n",
+    "\n",
+    "\n",
+    "layout=[\n",
+    "    [sg.Text(text=\"Name          :\"),sg.Input(key='-I-')],\n",
+    "    [sg.Text(text=\"Enrollment   :\"),sg.Input(key='-J-')],\n",
+    "    [sg.Text(text=\"College Year :\"),sg.Input(key='-K-')],\n",
+    "    [sg.OK(),sg.Exit()]\n",
+    "         ]\n",
+    "\n",
+    "window=sg.Window(\"Student Data\",layout,size=(400,130))\n",
+    "\n",
+    "while True:\n",
+    "    event,value=window.read()\n",
+    "    if event in (None,'Exit'):\n",
+    "        break\n",
+    "    print(event,value)\n",
+    "    window['-J-'].update('')\n",
+    "    window['-K-'].update('')\n",
+    "    window['-I-'].update('')\n",
     "window.close()"
    ]
   }
