--- a/Include/jupyter_files/Deep-Learning/perceptron-loss-function.ipynb
+++ b/Include/jupyter_files/Deep-Learning/perceptron-loss-function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b516b0a210>"
+       "<matplotlib.collections.PathCollection at 0x1bbaa608ad0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,10 +177,8 @@
     "    for j in range(1000):\n",
     "    \n",
     "        for i in range(X.shape[0]):\n",
-    "\n",
     "            # check condition\n",
     "            z = w1*X[i][0] + w2*X[i][1] + b\n",
-    "\n",
     "            if z*y[i] < 0:\n",
     "                w1 = w1 + lr*y[i]*X[i][0]\n",
     "                w2 = w2 + lr*y[i]*X[i][1]\n",
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +221,7 @@
        "(-3.0, 2.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -248,6 +246,41 @@
     "plt.plot(x_input,y_input,color='red',linewidth=3)\n",
     "plt.scatter(X[:,0],X[:,1])\n",
     "plt.ylim(-3,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 1 0 0 1 0 0]\n",
+      "[1 1 1 0 1 0 0 1 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Perceptron\n",
+    "\n",
+    "t_x=[\n",
+    " [ 0.35523945 ,-0.11697552],\n",
+    " [-0.09282829,-0.73115232],\n",
+    " [-0.1984984 ,-0.7081059 ],\n",
+    " [-2.44001098,-2.01199214],\n",
+    " [-0.0448475 , 1.63493163],\n",
+    " [-1.68155714, 0.15599044],\n",
+    " [-2.64121606, 1.07782053],\n",
+    " [ 0.2416527 , 0.80626713],\n",
+    " [-0.40266099, 0.74859527],\n",
+    " [-2.80888854, 0.75152794]]\n",
+    "\n",
+    "t=Perceptron().fit(X,y)\n",
+    "# print(t.predict(X))\n",
+    "print(t.predict(t_x))\n",
+    "print(y[:10])"
    ]
   }
  ],
