--- a/Include/jupyter_files/Deep-Learning/feature_scaling.ipynb
+++ b/Include/jupyter_files/Deep-Learning/feature_scaling.ipynb
@@ -92,17 +92,62 @@
               "      <td>76000</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>395</th>\n",
+              "      <td>46</td>\n",
+              "      <td>41000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>396</th>\n",
+              "      <td>51</td>\n",
+              "      <td>23000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>397</th>\n",
+              "      <td>50</td>\n",
+              "      <td>20000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>398</th>\n",
+              "      <td>36</td>\n",
+              "      <td>33000</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>399</th>\n",
+              "      <td>49</td>\n",
+              "      <td>36000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>400 rows × 3 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "   Age  EstimatedSalary  Purchased\n",
-              "0   19            19000          0\n",
-              "1   35            20000          0\n",
-              "2   26            43000          0\n",
-              "3   27            57000          0\n",
-              "4   19            76000          0"
+              "     Age  EstimatedSalary  Purchased\n",
+              "0     19            19000          0\n",
+              "1     35            20000          0\n",
+              "2     26            43000          0\n",
+              "3     27            57000          0\n",
+              "4     19            76000          0\n",
+              "..   ...              ...        ...\n",
+              "395   46            41000          1\n",
+              "396   51            23000          1\n",
+              "397   50            20000          1\n",
+              "398   36            33000          0\n",
+              "399   49            36000          1\n",
+              "\n",
+              "[400 rows x 3 columns]"
             ]
           },
           "execution_count": 4,
@@ -112,7 +157,7 @@
       ],
       "source": [
         "df = df.iloc[:,2:]\n",
-        "df.head()"
+        "df"
       ]
     },
     {
